trungtv update api cancel bill and update api get bills
