# app/Models/Bill.php
@@ -14,6 +14,11 @@ class Bill extends Model
     const BILL_STATUS_SUCCESS = 3;
     const BILL_STATUS_CANCEL = 4;
 
+    const  PAYMENT_OFFLINE = 0;
+    const PAYMENT_ONLINE = 1;
+
+    const TYPE_OFFLINE = 0;
+    const TYPE_ONLINE = 1;
     /**
      * table
      *
@@ -45,6 +50,83 @@ class Bill extends Model
         'deleted_at',
     ];
 
+    /**
+     * get attribute check type
+     *
+     */
+    protected function getTypePaymentAttribute(): bool
+    {
+        return $this->type === Bill::TYPE_OFFLINE;
+    }
+
+    /**
+     * get attribute check type
+     *
+     */
+    protected function getCanCancelAttribute(): bool
+    {
+        return $this->bill_status === Bill::BILL_STATUS_WAITING_CONFIRM;
+    }
+
+    /**
+     * get Status bill
+     *
+     * @return string
+     */
+    public function getStatusLabelAttribute(): string
+    {
+        $label = [
+            '' => '',
+            self::BILL_STATUS_WAITING_CONFIRM => 'Chờ xác nhận',
+            self::BILL_STATUS_CONFIRMED => 'Đã xác nhận',
+            self::BILL_STATUS_BEING_TRANSPORTED => 'Đang giao hàng',
+            self::BILL_STATUS_SUCCESS => 'Giao hàng thành công',
+            self::BILL_STATUS_CANCEL => 'Huỷ đơn',
+        ];
+        return $label[$this->bill_status];
+    }
+
+    /**
+     * get Payment Label
+     *
+     * @return string
+     */
+    public function getPaymentLabelAttribute(): string
+    {
+        $label = [
+            '' => '',
+            self::PAYMENT_OFFLINE => 'Thanh toán khi nhận hàng',
+            self::PAYMENT_ONLINE => 'Thanh toán trực tuyến',
+        ];
+        return $label[$this->payment];
+    }
+
+    /**
+     * get type Payment
+     *
+     * @return string
+     */
+    public function getTypeLabelAttribute(): string
+    {
+        $label = [
+            '' => '',
+            self::TYPE_OFFLINE => 'Mua hàng tại cửa hàng',
+            self::TYPE_ONLINE => 'Mua hàng trực tuyến',
+        ];
+        return $label[$this->type];
+    }
+
+    /**
+     * get Address bill Attribute
+     *
+     * @return string
+     */
+    public function getBillAddressAttribute()
+    {
+        return join(', ', array_filter([$this->address, $this->dist?->name, $this->city?->name], 'strlen'));
+    }
+
+
     public function billDetails()
     {
         return $this->hasMany(BillDetail::class, 'bill_id', 'id');
@@ -57,12 +139,11 @@ class Bill extends Model
 
     public function city()
     {
-        return $this->hasOne(City::class, 'id', 'city_id');
+        return $this->belongsTo(City::class, 'city_id', 'id');
     }
 
     public function dist()
     {
-        return $this->hasOne(Dist::class, 'id', 'dist_id');
+        return $this->belongsTo(Dist::class, 'dist_id', 'id');
     }
-
 }
